<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registreren.RegistreerGroep">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/stap2"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/groepsnaam"
        android:paddingLeft="5dp"
        android:text="@string/groepsnaam"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtGroepsnaam"
        android:layout_width="327dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edittextlayout"
        android:backgroundTint="#FFF"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:hint="@string/textboxgroepsnaam"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/Grijs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="327dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:paddingLeft="5dp"
        android:text="@string/groepsleden"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroepsnaam" />

    <EditText
        android:id="@+id/txtGroepsLeden"
        android:layout_width="327dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edittextlayout"
        android:backgroundTint="#FFF"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:hint="@string/textboxgroepsleden"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/Grijs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <!--<EditText
        android:id="@+id/txtGroepsLeden"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextlayout"
        android:fontFamily="@font/montserrat"
        android:gravity="top"
        android:maxLines="5"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:backgroundTint="#FFF"
        android:textColor="@color/Grijs"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
        -->
    <Button
        android:id="@+id/cmdNaarCategorie"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonlayoutclassicblue"
        android:fontFamily="@font/montserrat"
        android:text="@string/gaverder"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:visibility="visible"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--
            </android.support.constraint.ConstraintLayout>
        </ScrollView>-->
</android.support.constraint.ConstraintLayout>