<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registreren.RegisterPhoto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background1" />

    <TextView
        android:id="@+id/txtStap2"
        android:layout_width="277dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/stap1"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photoViewer"
        android:layout_width="306dp"
        android:layout_height="306dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/cmdNeemFoto"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutlightblue"
        android:enabled="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/maakfoto"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAllCaps="false"

        app:layout_constraintBottom_toTopOf="@+id/cmdVolgende"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cmdVolgende"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutclassicblue"
        android:fontFamily="@font/montserrat"
        android:text="@string/gaverder"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:enabled="true"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>