<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registreren.RegisterCategories"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/background1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/stap3"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#7827283b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/linLay">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
>


        <TextView
            android:id="@+id/txtAantalGeselecteerd"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:lines="3"
            android:text="@string/geselecteerd"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cmdNext"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.4"
            android:background="@drawable/buttonlayoutclassicblue"
            android:enabled="false"
            android:fontFamily="@font/montserrat"
            android:text="@string/gaverder"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listView" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>