<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.vragenOplossen.VragenOplossen"
    android:background="@color/Donkerblauw">


    <ImageView
        android:id="@+id/photoViewer"
        android:layout_width="247dp"
        android:layout_height="259dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cmdNeemFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/cmdNeemFoto"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonlayoutlightblue"
        android:enabled="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/maakfoto"

        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVulIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVulIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/buttonlayoutlightblue"
        android:fontFamily="@font/montserrat"
        android:text="@string/vulIn"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFF"
        android:textSize="35sp"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/vraag"
        android:textColor="#FFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/montserrat"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>